hphp/test/slow/hh_namespace_migration/hh_set/hh_set3.php.expectf
HipHop Fatal error: Class undefined: Test\Set in %s/slow/hh_namespace_migration/hh_set/hh_set3.php on line 9
